--- a/styleD.css
+++ b/styleD.css
@@ -3,10 +3,10 @@ p {
 }
 
 a {
-    color: red;
+    color: darkblue;
 }
 body {
     font-size: 14px;
     color: gray;
-	background-color: blue
+	background-color: lightblue
 }
