added WIP navbar
yay

--- a/style.css
+++ b/style.css
@@ -1,5 +1,19 @@
+ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+}
+
+li a {
+	display: block;
+	width: 130px;
+	background-color: #dddddd;
+	padding: 8px 16px;
+}
 p {
     color: black;
+	background-color: white;
+	width: 200px;
 }
 
 a {
@@ -8,5 +22,7 @@ a {
 body {
     font-size: 14px;
     color: red;
-	background-color: lightgray
+	background-image: url("images/bg.gif");
+	background-repeat: no-repeat center center fixed;
+	background-size: cover;
 }
