--- a/style.css
+++ b/style.css
@@ -10,6 +10,12 @@ li a {
 	background-color: #dddddd;
 	padding: 8px 16px;
 }
+
+li a :hover {
+	background-color: #555;
+	color: white;
+}
+
 p {
     color: black;
 	background-color: white;
