--- a/style.css
+++ b/style.css
@@ -2,18 +2,25 @@ ul {
     list-style-type: none;
     margin: 0;
     padding: 0;
+	width: 200px;
+	background-color: #f1f1f1
 }
 
 li a {
 	display: block;
-	width: 130px;
-	background-color: #dddddd;
+	color: #000;
 	padding: 8px 16px;
+	text-decoration: none;
 }
 
-li a :hover {
-	background-color: #555;
-	color: white;
+li a:hover {
+    background-color: #555;
+    color: white;
+}
+
+.active {
+    background-color: #4CAF50;
+    color: white;
 }
 
 p {
@@ -28,7 +35,7 @@ a {
 body {
     font-size: 14px;
     color: red;
-	background-image: url("images/bg.gif");
+	background-image: url("images/pat.jpg");
 	background-repeat: no-repeat center center fixed;
 	background-size: cover;
 }
