--- a/styleP.css
+++ b/styleP.css
@@ -10,3 +10,20 @@ body {
     color: black;
 	background-color: lightgray
 }
+
+li a {
+	display: block;
+	color: #000;
+	padding: 8px 16px;
+	text-decoration: none;
+}
+
+li a:hover {
+    background-color: #555;
+    color: white;
+}
+
+.active {
+    background-color: #4CAF50;
+    color: white;
+}
