--- a/styleD.css
+++ b/styleD.css
@@ -11,6 +11,14 @@ body {
 	background-color: lightblue
 }
 
+ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+	width: 200px;
+	background-color: #f1f1f1
+}
+
 li a {
 	display: block;
 	color: #000;
