made navbar look nice

--- a/style.css
+++ b/style.css
@@ -2,8 +2,12 @@ ul {
     list-style-type: none;
     margin: 0;
     padding: 0;
-	width: 200px;
-	background-color: #f1f1f1
+	background-color: #dbdbdb;
+	overflow: hidden;
+}
+
+li {
+	float: left;
 }
 
 li a {
@@ -11,11 +15,11 @@ li a {
 	color: #000;
 	padding: 8px 16px;
 	text-decoration: none;
-	text-align:center
+	text-align:center;
 }
 
 li a.active {
-    background-color: #4CAF50;
+    background-color: #ffa100;
     color: white;
 }
 
