--- a/styleA.css
+++ b/styleA.css
@@ -15,8 +15,12 @@ ul {
     list-style-type: none;
     margin: 0;
     padding: 0;
-	width: 200px;
-	background-color: #f1f1f1
+	background-color: #dbdbdb;
+	overflow: hidden;
+}
+
+li {
+	float: left;
 }
 
 li a {
@@ -24,14 +28,16 @@ li a {
 	color: #000;
 	padding: 8px 16px;
 	text-decoration: none;
+	text-align:center;
 }
 
-li a:hover {
+li a.active {
+    background-color: #ffa100;
+    color: white;
+}
+
+li a:hover:not(.active) {
     background-color: #555;
     color: white;
 }
 
-.active {
-    background-color: #4CAF50;
-    color: white;
-}
